--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -19,6 +19,10 @@
 		"compression-webpack-plugin": "latest",
 		"uglifyjs-webpack-plugin": "latest",
 		"source-map-loader": "latest",
+		"purify-css": "latest",
+		"purifycss-webpack": "latest",
+		"optimize-css-assets-webpack-plugin": "3.2.0",
+		"glob-all": "latest",
 		"webpack": "^3.10.0"
 	},
 	"devDependencies": {}
