--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -14,16 +14,16 @@
 		"ts-loader": "^3.2.0",
 		"preact": "^8.2.7",
 		"typescript": "^2.6.2",
-		"html-webpack-plugin": "latest",
-		"extract-text-webpack-plugin": "latest",
-		"compression-webpack-plugin": "latest",
-		"uglifyjs-webpack-plugin": "latest",
-		"source-map-loader": "latest",
-		"purify-css": "latest",
-		"purifycss-webpack": "latest",
-		"optimize-css-assets-webpack-plugin": "3.2.0",
-		"asset-graph-webpack-plugin": "0.1.3",
-		"glob-all": "latest",
+		"html-webpack-plugin": "^2.30.1",
+		"extract-text-webpack-plugin": "^3.0.2",
+		"compression-webpack-plugin": "^1.1.3",
+		"uglifyjs-webpack-plugin": "^1.1.5",
+		"source-map-loader": "^0.2.3",
+		"purify-css": "^1.2.5",
+		"purifycss-webpack": "^0.7.0",
+		"optimize-css-assets-webpack-plugin": "^3.2.0",
+		"asset-graph-webpack-plugin": "^0.1.4",
+		"glob-all": "^3.1.0",
 		"webpack": "^3.10.0"
 	},
 	"devDependencies": {}
