--- a/pom.xml
+++ b/pom.xml
@@ -98,8 +98,8 @@
 						<execution>
 							<id>install node and npm</id>
 							<configuration>
-								<nodeVersion>v8.9.3</nodeVersion>
-								<npmVersion>5.5.1</npmVersion>
+								<nodeVersion>v8.9.4</nodeVersion>
+								<npmVersion>5.6.0</npmVersion>
 							</configuration>
 						</execution>
 						<execution>
@@ -113,6 +113,32 @@
 							</configuration>
 						</execution>
 					</executions>
+				</plugin>
+				<plugin>
+					<groupId>org.eclipse.m2e</groupId>
+					<artifactId>lifecycle-mapping</artifactId>
+					<version>1.0.0</version>
+					<configuration>
+						<lifecycleMappingMetadata>
+							<pluginExecutions>
+								<pluginExecution>
+									<pluginExecutionFilter>
+										<groupId>com.github.eirslett</groupId>
+										<artifactId>frontend-maven-plugin</artifactId>
+										<versionRange>[1.6,)</versionRange>
+										<goals>
+											<goal>webpack</goal>
+										</goals>
+									</pluginExecutionFilter>
+									<action>
+										<execute>
+											<runOnIncremental>false</runOnIncremental>
+										</execute>
+									</action>
+								</pluginExecution>
+							</pluginExecutions>
+						</lifecycleMappingMetadata>
+					</configuration>
 				</plugin>
 			</plugins>
 		</pluginManagement>
