--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -5,6 +5,10 @@
 	"author": "stephanpelikan",
 	"license": "Apache 2.0",
 	"dependencies": {
+		"preact": "^8.2.7",
+		"decko": "^1.2.0"
+	},
+	"devDependencies": {
 		"bulma": "^0.6.1",
 		"sass-loader": "^6.0.6",
 		"node-sass": "^4.7.2",
@@ -12,8 +16,7 @@
 		"css-loader": "^0.28.7",
 		"style-loader": "^0.19.1",
 		"ts-loader": "^3.2.0",
-		"preact": "^8.2.7",
-		"typescript": "^2.6.2",
+		"typescript": "^2.4.1",
 		"html-webpack-plugin": "^2.30.1",
 		"extract-text-webpack-plugin": "^3.0.2",
 		"compression-webpack-plugin": "^1.1.3",
@@ -24,7 +27,14 @@
 		"optimize-css-assets-webpack-plugin": "^3.2.0",
 		"asset-graph-webpack-plugin": "^0.1.4",
 		"glob-all": "^3.1.0",
-		"webpack": "^3.10.0"
+		"webpack": "^3.10.0",
+		"webpack-dev-server": "^2.10.1",
+		"@types/node": "^9.3.0",
+		"@types/webpack-env": "^1.13.0"
 	},
-	"devDependencies": {}
+	"scripts": {
+		"build": "webpack --env.outputDirectory=/tmp/htdocs --config webpack.dev.config.js --progress",
+		"start": "webpack-dev-server --env.outputDirectory=/tmp/htdocs --config webpack.dev.config.js --progress --open",
+		"watch": "webpack --env.outputDirectory=/tmp/htdocs --config webpack.dev.config.js --progress --watch"
+	}
 }
