Make pom.xml ready for production and Eclipse

--- a/pom.xml
+++ b/pom.xml
@@ -43,32 +43,6 @@
 		<pluginManagement>
 			<plugins>
 				<plugin>
-					<groupId>org.eclipse.m2e</groupId>
-					<artifactId>lifecycle-mapping</artifactId>
-					<version>1.0.0</version>
-					<configuration>
-						<lifecycleMappingMetadata>
-							<pluginExecutions>
-								<pluginExecution>
-									<pluginExecutionFilter>
-										<groupId>com.github.eirslett</groupId>
-										<artifactId>frontend-maven-plugin</artifactId>
-										<versionRange>[1.6,)</versionRange>
-										<goals>
-											<goal>webpack</goal>
-										</goals>
-									</pluginExecutionFilter>
-									<action>
-										<execute>
-											<runOnIncremental>false</runOnIncremental>
-										</execute>
-									</action>
-								</pluginExecution>
-							</pluginExecutions>
-						</lifecycleMappingMetadata>
-					</configuration>
-				</plugin>
-				<plugin>
 					<artifactId>maven-clean-plugin</artifactId>
 					<version>3.0.0</version>
 					<configuration>
@@ -176,7 +150,9 @@
 			<id>eclipse</id>
 
 			<activation>
-				<activeByDefault>true</activeByDefault>
+				<property>
+					<name>m2e.version</name>
+				</property>
 			</activation>
 
 			<properties>
@@ -184,6 +160,36 @@
 			</properties>
 
 			<build>
+				<pluginManagement>
+					<plugins>
+						<plugin>
+							<groupId>org.eclipse.m2e</groupId>
+							<artifactId>lifecycle-mapping</artifactId>
+							<version>1.0.0</version>
+							<configuration>
+								<lifecycleMappingMetadata>
+									<pluginExecutions>
+										<pluginExecution>
+											<pluginExecutionFilter>
+												<groupId>com.github.eirslett</groupId>
+												<artifactId>frontend-maven-plugin</artifactId>
+												<versionRange>[1.6,)</versionRange>
+												<goals>
+													<goal>webpack</goal>
+												</goals>
+											</pluginExecutionFilter>
+											<action>
+												<execute>
+													<runOnIncremental>false</runOnIncremental>
+												</execute>
+											</action>
+										</pluginExecution>
+									</pluginExecutions>
+								</lifecycleMappingMetadata>
+							</configuration>
+						</plugin>
+					</plugins>
+				</pluginManagement>
 				<plugins>
 					<plugin>
 						<groupId>com.github.eirslett</groupId>
@@ -223,6 +229,12 @@
 
 		<profile>
 			<id>production</id>
+
+			<activation>
+				<property>
+					<name>!m2e.version</name>
+				</property>
+			</activation>
 
 			<properties>
 				<outputDirectory>${project.build.directory}/${project.build.finalName}</outputDirectory>
