--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -6,7 +6,7 @@
 	"license": "Apache 2.0",
 	"dependencies": {
 		"preact": "^8.2.7",
-		"decko": "^1.2.0"
+		"preact-compat": "^3.17.0"
 	},
 	"devDependencies": {
 		"bulma": "^0.6.1",
@@ -30,7 +30,9 @@
 		"webpack": "^3.10.0",
 		"webpack-dev-server": "^2.10.1",
 		"@types/node": "^9.3.0",
-		"@types/webpack-env": "^1.13.0"
+		"@types/webpack-env": "^1.13.0",
+		"@types/react": "latest",
+		"@types/react-dom": "latest"
 	},
 	"scripts": {
 		"build": "webpack --env.outputDirectory=/tmp/htdocs --config webpack.prod.config.js --progress",
