--- a/src/main/frontend/tsconfig.json
+++ b/src/main/frontend/tsconfig.json
@@ -8,20 +8,32 @@
 			"es6",
 			"dom"
 		],
-		"module": "commonjs",
+		"module": "es6",
 		"moduleResolution": "node",
 		"noImplicitAny": true,
 		"allowSyntheticDefaultImports": true,
 		"removeComments": true,
+		"strictNullChecks": false,
 		"sourceMap": true,
 		"jsx": "react",
-		"jsxFactory": "h",
+		"jsxFactory": "React.createElement",
 		"typeRoots": [
 			"node_modules/@types"
-		]
+		],
+		"paths": {
+			"react": [
+				"node_modules/preact-compat/"
+			],
+			"react-dom": [
+				"node_modules/preact-compat/"
+			]
+		}
 	},
 	"include": [
 		"./**/*.tsx",
 		"./**/*.ts"
+	],
+	"exclude": [
+		"node_modules"
 	]
 }
