--- a/src/main/frontend/package.json
+++ b/src/main/frontend/package.json
@@ -16,6 +16,7 @@
 		"css-loader": "^0.28.7",
 		"style-loader": "^0.19.1",
 		"ts-loader": "^3.2.0",
+		"react-hot-loader": "^3.1.3",
 		"typescript": "^2.4.1",
 		"html-webpack-plugin": "^2.30.1",
 		"extract-text-webpack-plugin": "^3.0.2",
@@ -31,8 +32,9 @@
 		"webpack-dev-server": "^2.10.1",
 		"@types/node": "^9.3.0",
 		"@types/webpack-env": "^1.13.0",
-		"@types/react": "latest",
-		"@types/react-dom": "latest"
+		"@types/react": "^16.0.34",
+		"@types/react-dom": "^16.0.3",
+		"@types/react-hot-loader": "^3.0.5"
 	},
 	"scripts": {
 		"build": "webpack --env.outputDirectory=/tmp/htdocs --config webpack.prod.config.js --progress",
